--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "express": "^4.16.4",
     "hbs": "^4.0.1",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "dotenv": "^16.0.1",
+    "request": "^2.88.0"
   }
 }
